# ripgrep

./: Cargo.toml
grep-matcher/: Cargo.toml
grep-matcher/src/: interpolate.rs  lib.rs
grep-printer/: Cargo.toml
grep-printer/src/: color.rs  counter.rs  json.rs  jsont.rs  lib.rs  standard.rs  stats.rs  util.rs
grep-regex/: Cargo.toml
grep-regex/src/: ast.rs  config.rs  lib.rs  matcher.rs  non_matching.rs  strip.rs
grep-searcher/: Cargo.toml
grep-searcher/src/: lib.rs  lines.rs  sink.rs  testutil.rs
grep-searcher/src/searcher/: core.rs  glue.rs  mmap.rs  mod.rs
src/: app.rs  args.rs  main.rs
