[package]
name = "grep-regex"
version = "0.0.1"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
Use Rust's regex library with the 'grep' crate.
"""
documentation = "https://docs.rs/grep-regex"
homepage = "https://github.com/BurntSushi/ripgrep"
repository = "https://github.com/BurntSushi/ripgrep"
readme = "README.md"
keywords = ["regex", "grep", "search", "pattern", "line"]
license = "Unlicense/MIT"

[dependencies]
log = "0.4"
grep-matcher = { version = "0.0.1", path = "../grep-matcher" }
regex = { version = "1", path = "/home/andrew/rust/regex" }
regex-syntax = { version = "0.6", path = "/home/andrew/rust/regex/regex-syntax" }
thread_local = "0.3.5"
utf8-ranges = "1"
